devel
-----

* Add support for building with Zen 3 CPU when optimizing for the local
  architecture.
  
* The web UI's node overview now displays also agent information (cluster only).

* The statistics view in the web UI does now provide more system specific
  information in case the Metrics API is enabled. Different statistics may
  be visible depending on the operating system.

* Added metrics documentation snippets and infrastructure for that.

* Added a new cluster distribution view to the web UI. The view includes general
  details about cluster-wide distrubution in general as well as more detailed 
  shard distribution specific information.

* Follower primaries respond with
  TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION
  to any read request. Fixes a wrongly responded 404 from chaos
  tests.

* Fixed Github issue #13632: Query Fails on Upsert with Replace_nth.

* Reasonably harden MoveShard against invalid VelocyPack input.

* Removed older reference to VelocyPackDumper.

* Added `--documents-per-batch` option to arangoexport.
  This option allows to control the number of documents to be returned by each
  server-side batch. It can be used to limit the number of documents per batch
  when exporting collections with large documents.

* Added a new metrics view to the web UI. This view can be used in a clustered
  environment as well as in a single instance. Metrics are displayed either in
  a tabular format or as plain text (Prometheus Text-based format).
  Additionally, the metrics can be downloaded there.

* Added a new maintenance mode tab to the web UI in cluster mode. 
  The new tab shows the current state of the cluster supervision maintenance 
  and allows to enable/disable the maintenance mode from there. The tab will
  only be visible in the `_system` database. The required privileges for
  displaying the maintenance mode status and/or changing it are the as for 
  using the REST APIs for the maintenance mode.
