@@ -65,6 +65,10 @@
       <span>SmartGraph Info: Only use non-existent collection names (vertices/edges).</span>
     </div>
 
+    <div id="smartGraphInfoOneShard" class="infoMessage" style="display: none">
+      <span>Creating SmartGraphs in a OneShard database is discouraged. SmartGraphs only make sense when data are actually distributed, which is exactly opposite to the purpose of the OneShard feature. Using a SmartGraph in a OneShard database may lead to some OneShard query optimizations being disabled.</span>
+    </div>
+
     <%
     var createTR = function(row, disableSubmitOnEnter) {
       var mandatory = '';
