@@ -365,6 +365,9 @@
     border-radius: 3px;
     font-size: 9pt;
     padding: 5px;
+    font-weight: 400;
+    color: #000;
+    margin-bottom: 10px;
   }
 }
 
